# document-rag-chat

./: .env.example  docker-compose.yml  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
src/: api.py  main.py
src/core/: logger.py  utils.py
src/core/db/: mongo.py
src/modules/documents/: model.py
src/modules/tags/: controller.py
src/modules/users/: controller.py  model.py  service.py
tests/: test_main.py  test_utils.py
